ac.syn.output
State 7 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: PROGRAM_ELEMENT
    2        | PROGRAM PROGRAM_ELEMENT

    3 PROGRAM_ELEMENT: SENTENCE '\n'
    4                | '\n'

    5 BLOCK: DEL_BL_A SENTENCE_GROUP DEL_BL_C
    6      | '\n' DEL_BL_A SENTENCE_GROUP DEL_BL_C

    7 SENTENCE_GROUP: PROGRAM_ELEMENT
    8               | SENTENCE_GROUP PROGRAM_ELEMENT

    9 SENTENCE: BLOCK
   10         | ID '=' EXPR
   11         | PRINT EXPR
   12         | PRINT STR
   13         | PRINT STR EXPR
   14         | READ ID
   15         | READ STR ID
   16         | WHILE '(' EXPR ')' SENTENCE
   17         | IF '(' EXPR ')' SENTENCE ELSE SENTENCE
   18         | IF '(' EXPR ')' SENTENCE

   19 EXPR: EXPR EQ EXPR
   20     | EXPR NE EXPR
   21     | EXPR LAND EXPR
   22     | EXPR LOR EXPR
   23     | EXPR LT EXPR
   24     | EXPR GT EXPR
   25     | EXPR '+' EXPR
   26     | EXPR '-' EXPR
   27     | EXPR '*' EXPR
   28     | EXPR '/' EXPR
   29     | EXPR '%' EXPR
   30     | EXPR '^' EXPR
   31     | EXPR DIV EXPR
   32     | '+' EXPR
   33     | '-' EXPR
   34     | '(' EXPR ')'
   35     | EXPR BAND EXPR
   36     | EXPR BOR EXPR
   37     | BNOT EXPR
   38     | EXPR SL EXPR
   39     | EXPR SR EXPR
   40     | FLOAT
   41     | INT
   42     | ID
   43     | SIN '(' EXPR ')'
   44     | COS '(' EXPR ')'
   45     | TAN '(' EXPR ')'
   46     | LN '(' EXPR ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 6
'%' (37) 29
'(' (40) 16 17 18 34 43 44 45 46
')' (41) 16 17 18 34 43 44 45 46
'*' (42) 27
'+' (43) 25 32
'-' (45) 26 33
'/' (47) 28
'=' (61) 10
'^' (94) 30
error (256)
EQ (258) 19
NE (259) 20
LAND (260) 21
LOR (261) 22
LT (262) 23
GT (263) 24
BAND (264) 35
BOR (265) 36
SL (266) 38
SR (267) 39
DIV (268) 31
UNARY (269)
BNOT (270) 37
ID (271) 10 14 15 42
PRINT (272) 11 12 13
READ (273) 14 15
SIN (274) 43
COS (275) 44
TAN (276) 45
LN (277) 46
INT (278) 41
FLOAT (279) 40
STR (280) 12 13 15
WHILE (281) 16
IF (282) 17 18
ELSE (283) 17
DEL_BL_A (284) 5 6
DEL_BL_C (285) 5 6


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
PROGRAM (42)
    on left: 1 2, on right: 0 2
PROGRAM_ELEMENT (43)
    on left: 3 4, on right: 1 2 7 8
BLOCK (44)
    on left: 5 6, on right: 9
SENTENCE_GROUP (45)
    on left: 7 8, on right: 5 6 8
SENTENCE (46)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 3 16 17 18
EXPR (47)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46, on right: 10 11 13 16 17 18 19 20
    21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 43 44
    45 46


State 0

    0 $accept: . PROGRAM $end

    ID        shift, and go to state 1
    PRINT     shift, and go to state 2
    READ      shift, and go to state 3
    WHILE     shift, and go to state 4
    IF        shift, and go to state 5
    DEL_BL_A  shift, and go to state 6
    '\n'      shift, and go to state 7

    PROGRAM          go to state 8
    PROGRAM_ELEMENT  go to state 9
    BLOCK            go to state 10
    SENTENCE         go to state 11


State 1

   10 SENTENCE: ID . '=' EXPR

    '='  shift, and go to state 12


State 2

   11 SENTENCE: PRINT . EXPR
   12         | PRINT . STR
   13         | PRINT . STR EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    STR    shift, and go to state 23
    '('    shift, and go to state 24

    EXPR  go to state 25


State 3

   14 SENTENCE: READ . ID
   15         | READ . STR ID

    ID   shift, and go to state 26
    STR  shift, and go to state 27


State 4

   16 SENTENCE: WHILE . '(' EXPR ')' SENTENCE

    '('  shift, and go to state 28


State 5

   17 SENTENCE: IF . '(' EXPR ')' SENTENCE ELSE SENTENCE
   18         | IF . '(' EXPR ')' SENTENCE

    '('  shift, and go to state 29


State 6

    5 BLOCK: DEL_BL_A . SENTENCE_GROUP DEL_BL_C

    ID        shift, and go to state 1
    PRINT     shift, and go to state 2
    READ      shift, and go to state 3
    WHILE     shift, and go to state 4
    IF        shift, and go to state 5
    DEL_BL_A  shift, and go to state 6
    '\n'      shift, and go to state 7

    PROGRAM_ELEMENT  go to state 30
    BLOCK            go to state 10
    SENTENCE_GROUP   go to state 31
    SENTENCE         go to state 11


State 7

    4 PROGRAM_ELEMENT: '\n' .
    6 BLOCK: '\n' . DEL_BL_A SENTENCE_GROUP DEL_BL_C

    DEL_BL_A  shift, and go to state 32

    DEL_BL_A  [reduce using rule 4 (PROGRAM_ELEMENT)]
    $default  reduce using rule 4 (PROGRAM_ELEMENT)


State 8

    0 $accept: PROGRAM . $end
    2 PROGRAM: PROGRAM . PROGRAM_ELEMENT

    $end      shift, and go to state 33
    ID        shift, and go to state 1
    PRINT     shift, and go to state 2
    READ      shift, and go to state 3
    WHILE     shift, and go to state 4
    IF        shift, and go to state 5
    DEL_BL_A  shift, and go to state 6
    '\n'      shift, and go to state 7

    PROGRAM_ELEMENT  go to state 34
    BLOCK            go to state 10
    SENTENCE         go to state 11


State 9

    1 PROGRAM: PROGRAM_ELEMENT .

    $default  reduce using rule 1 (PROGRAM)


State 10

    9 SENTENCE: BLOCK .

    $default  reduce using rule 9 (SENTENCE)


State 11

    3 PROGRAM_ELEMENT: SENTENCE . '\n'

    '\n'  shift, and go to state 35


State 12

   10 SENTENCE: ID '=' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 36


State 13

   32 EXPR: '+' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 37


State 14

   33 EXPR: '-' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 38


State 15

   37 EXPR: BNOT . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 39


State 16

   42 EXPR: ID .

    $default  reduce using rule 42 (EXPR)


State 17

   43 EXPR: SIN . '(' EXPR ')'

    '('  shift, and go to state 40


State 18

   44 EXPR: COS . '(' EXPR ')'

    '('  shift, and go to state 41


State 19

   45 EXPR: TAN . '(' EXPR ')'

    '('  shift, and go to state 42


State 20

   46 EXPR: LN . '(' EXPR ')'

    '('  shift, and go to state 43


State 21

   41 EXPR: INT .

    $default  reduce using rule 41 (EXPR)


State 22

   40 EXPR: FLOAT .

    $default  reduce using rule 40 (EXPR)


State 23

   12 SENTENCE: PRINT STR .
   13         | PRINT STR . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    $default  reduce using rule 12 (SENTENCE)

    EXPR  go to state 44


State 24

   34 EXPR: '(' . EXPR ')'

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 45


State 25

   11 SENTENCE: PRINT EXPR .
   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    EQ    shift, and go to state 46
    NE    shift, and go to state 47
    LAND  shift, and go to state 48
    LOR   shift, and go to state 49
    LT    shift, and go to state 50
    GT    shift, and go to state 51
    BAND  shift, and go to state 52
    BOR   shift, and go to state 53
    SL    shift, and go to state 54
    SR    shift, and go to state 55
    '+'   shift, and go to state 56
    '-'   shift, and go to state 57
    '*'   shift, and go to state 58
    '/'   shift, and go to state 59
    '%'   shift, and go to state 60
    DIV   shift, and go to state 61
    '^'   shift, and go to state 62

    $default  reduce using rule 11 (SENTENCE)


State 26

   14 SENTENCE: READ ID .

    $default  reduce using rule 14 (SENTENCE)


State 27

   15 SENTENCE: READ STR . ID

    ID  shift, and go to state 63


State 28

   16 SENTENCE: WHILE '(' . EXPR ')' SENTENCE

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 64


State 29

   17 SENTENCE: IF '(' . EXPR ')' SENTENCE ELSE SENTENCE
   18         | IF '(' . EXPR ')' SENTENCE

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 65


State 30

    7 SENTENCE_GROUP: PROGRAM_ELEMENT .

    $default  reduce using rule 7 (SENTENCE_GROUP)


State 31

    5 BLOCK: DEL_BL_A SENTENCE_GROUP . DEL_BL_C
    8 SENTENCE_GROUP: SENTENCE_GROUP . PROGRAM_ELEMENT

    ID        shift, and go to state 1
    PRINT     shift, and go to state 2
    READ      shift, and go to state 3
    WHILE     shift, and go to state 4
    IF        shift, and go to state 5
    DEL_BL_A  shift, and go to state 6
    DEL_BL_C  shift, and go to state 66
    '\n'      shift, and go to state 7

    PROGRAM_ELEMENT  go to state 67
    BLOCK            go to state 10
    SENTENCE         go to state 11


State 32

    6 BLOCK: '\n' DEL_BL_A . SENTENCE_GROUP DEL_BL_C

    ID        shift, and go to state 1
    PRINT     shift, and go to state 2
    READ      shift, and go to state 3
    WHILE     shift, and go to state 4
    IF        shift, and go to state 5
    DEL_BL_A  shift, and go to state 6
    '\n'      shift, and go to state 7

    PROGRAM_ELEMENT  go to state 30
    BLOCK            go to state 10
    SENTENCE_GROUP   go to state 68
    SENTENCE         go to state 11


State 33

    0 $accept: PROGRAM $end .

    $default  accept


State 34

    2 PROGRAM: PROGRAM PROGRAM_ELEMENT .

    $default  reduce using rule 2 (PROGRAM)


State 35

    3 PROGRAM_ELEMENT: SENTENCE '\n' .

    $default  reduce using rule 3 (PROGRAM_ELEMENT)


State 36

   10 SENTENCE: ID '=' EXPR .
   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    EQ    shift, and go to state 46
    NE    shift, and go to state 47
    LAND  shift, and go to state 48
    LOR   shift, and go to state 49
    LT    shift, and go to state 50
    GT    shift, and go to state 51
    BAND  shift, and go to state 52
    BOR   shift, and go to state 53
    SL    shift, and go to state 54
    SR    shift, and go to state 55
    '+'   shift, and go to state 56
    '-'   shift, and go to state 57
    '*'   shift, and go to state 58
    '/'   shift, and go to state 59
    '%'   shift, and go to state 60
    DIV   shift, and go to state 61
    '^'   shift, and go to state 62

    $default  reduce using rule 10 (SENTENCE)


State 37

   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   32     | '+' EXPR .
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    $default  reduce using rule 32 (EXPR)


State 38

   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   33     | '-' EXPR .
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    $default  reduce using rule 33 (EXPR)


State 39

   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   37     | BNOT EXPR .
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    $default  reduce using rule 37 (EXPR)


State 40

   43 EXPR: SIN '(' . EXPR ')'

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 69


State 41

   44 EXPR: COS '(' . EXPR ')'

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 70


State 42

   45 EXPR: TAN '(' . EXPR ')'

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 71


State 43

   46 EXPR: LN '(' . EXPR ')'

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 72


State 44

   13 SENTENCE: PRINT STR EXPR .
   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    EQ    shift, and go to state 46
    NE    shift, and go to state 47
    LAND  shift, and go to state 48
    LOR   shift, and go to state 49
    LT    shift, and go to state 50
    GT    shift, and go to state 51
    BAND  shift, and go to state 52
    BOR   shift, and go to state 53
    SL    shift, and go to state 54
    SR    shift, and go to state 55
    '+'   shift, and go to state 56
    '-'   shift, and go to state 57
    '*'   shift, and go to state 58
    '/'   shift, and go to state 59
    '%'   shift, and go to state 60
    DIV   shift, and go to state 61
    '^'   shift, and go to state 62

    $default  reduce using rule 13 (SENTENCE)


State 45

   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   34     | '(' EXPR . ')'
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    EQ    shift, and go to state 46
    NE    shift, and go to state 47
    LAND  shift, and go to state 48
    LOR   shift, and go to state 49
    LT    shift, and go to state 50
    GT    shift, and go to state 51
    BAND  shift, and go to state 52
    BOR   shift, and go to state 53
    SL    shift, and go to state 54
    SR    shift, and go to state 55
    '+'   shift, and go to state 56
    '-'   shift, and go to state 57
    '*'   shift, and go to state 58
    '/'   shift, and go to state 59
    '%'   shift, and go to state 60
    DIV   shift, and go to state 61
    '^'   shift, and go to state 62
    ')'   shift, and go to state 73


State 46

   19 EXPR: EXPR EQ . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 74


State 47

   20 EXPR: EXPR NE . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 75


State 48

   21 EXPR: EXPR LAND . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 76


State 49

   22 EXPR: EXPR LOR . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 77


State 50

   23 EXPR: EXPR LT . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 78


State 51

   24 EXPR: EXPR GT . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 79


State 52

   35 EXPR: EXPR BAND . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 80


State 53

   36 EXPR: EXPR BOR . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 81


State 54

   38 EXPR: EXPR SL . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 82


State 55

   39 EXPR: EXPR SR . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 83


State 56

   25 EXPR: EXPR '+' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 84


State 57

   26 EXPR: EXPR '-' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 85


State 58

   27 EXPR: EXPR '*' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 86


State 59

   28 EXPR: EXPR '/' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 87


State 60

   29 EXPR: EXPR '%' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 88


State 61

   31 EXPR: EXPR DIV . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 89


State 62

   30 EXPR: EXPR '^' . EXPR

    '+'    shift, and go to state 13
    '-'    shift, and go to state 14
    BNOT   shift, and go to state 15
    ID     shift, and go to state 16
    SIN    shift, and go to state 17
    COS    shift, and go to state 18
    TAN    shift, and go to state 19
    LN     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    '('    shift, and go to state 24

    EXPR  go to state 90


State 63

   15 SENTENCE: READ STR ID .

    $default  reduce using rule 15 (SENTENCE)


State 64

   16 SENTENCE: WHILE '(' EXPR . ')' SENTENCE
   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR

    EQ    shift, and go to state 46
    NE    shift, and go to state 47
    LAND  shift, and go to state 48
    LOR   shift, and go to state 49
    LT    shift, and go to state 50
    GT    shift, and go to state 51
    BAND  shift, and go to state 52
    BOR   shift, and go to state 53
    SL    shift, and go to state 54
    SR    shift, and go to state 55
    '+'   shift, and go to state 56
    '-'   shift, and go to state 57
    '*'   shift, and go to state 58
    '/'   shift, and go to state 59
    '%'   shift, and go to state 60
    DIV   shift, and go to state 61
    '^'   shift, and go to state 62
    ')'   shift, and go to state 91


State 65

   17 SENTENCE: IF '(' EXPR . ')' SENTENCE ELSE SENTENCE
   18         | IF '(' EXPR . ')' SENTENCE
   19 EXPR: EXPR . EQ EXPR
   20     | EXPR . NE EXPR
   21     | EXPR . LAND EXPR
   22     | EXPR . LOR EXPR
   23     | EXPR . LT EXPR
   24     | EXPR . GT EXPR
   25     | EXPR . '+' EXPR
   26     | EXPR . '-' EXPR
   27     | EXPR . '*' EXPR
   28     | EXPR . '/' EXPR
   29     | EXPR . '%' EXPR
   30     | EXPR . '^' EXPR
   31     | EXPR . DIV EXPR
   35     | EXPR . BAND EXPR
   36     | EXPR . BOR EXPR
   38     | EXPR . SL EXPR
   39     | EXPR . SR EXPR
